@@ -12,13 +12,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import jakarta.inject.Inject;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
 import no.nav.k9.felles.testutilities.cdi.CdiAwareExtension;
+import no.nav.k9.kodeverk.sykdom.Resultat;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
 import no.nav.k9.sak.domene.typer.tid.TidslinjeUtil;
+import no.nav.k9.sak.inngangsvilkår.omsorg.OmsorgenForDtoMapper;
+import no.nav.k9.sak.inngangsvilkår.omsorg.repo.OmsorgenForPeriode;
 import no.nav.k9.sak.kontrakt.omsorg.BarnRelasjon;
 import no.nav.k9.sak.kontrakt.omsorg.OmsorgenForDto;
-import no.nav.k9.sak.kontrakt.sykdom.Resultat;
 import no.nav.k9.sak.typer.Periode;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.omsorg.OmsorgenForPeriode;
 
 @ExtendWith(CdiAwareExtension.class)
 class OmsorgenForDtoMapperTest {
@@ -27,7 +28,7 @@ class OmsorgenForDtoMapperTest {
 
     @Test
     public void toOmsorgenForDtoListeCase1Test() {
-        List<OmsorgenForPeriode> omsorgenForPerioder = Arrays.asList(mockOmsorgenForPeriode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 15)));
+        List<OmsorgenForPeriode> omsorgenForPerioder = List.of(mockOmsorgenForPeriode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 15)));
 
         LocalDateTimeline<Boolean> tidslinjeTilVurdering = TidslinjeUtil.tilTidslinjeKomprimert(Arrays.asList(new Periode(LocalDate.of(2021, 2, 10), LocalDate.of(2021, 2, 20))));
 
@@ -44,12 +45,12 @@ class OmsorgenForDtoMapperTest {
 
     @Test
     public void toOmsorgenForDtoListeCase2Test() {
-        List<OmsorgenForPeriode> omsorgenForPerioder = Arrays.asList(mockOmsorgenForPeriode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 20)));
+        List<OmsorgenForPeriode> omsorgenForPerioder = List.of(mockOmsorgenForPeriode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 20)));
 
         LocalDateTimeline<Boolean> tidslinjeTilVurdering =
-                TidslinjeUtil.tilTidslinjeKomprimert(Arrays.asList(
-                        new Periode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 5)),
-                        new Periode(LocalDate.of(2021, 2, 10), LocalDate.of(2021, 2, 25))));
+            TidslinjeUtil.tilTidslinjeKomprimert(Arrays.asList(
+                new Periode(LocalDate.of(2021, 2, 1), LocalDate.of(2021, 2, 5)),
+                new Periode(LocalDate.of(2021, 2, 10), LocalDate.of(2021, 2, 25))));
 
         List<OmsorgenForDto> omsorgenForDtos = dtoMapper.toOmsorgenForDtoListe(omsorgenForPerioder, true, tidslinjeTilVurdering);
 
